--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-*.swp
-CMakeLists.txt
-teleop_twist_keyboard
-turtlebot
-turtlebot_interactions
-turtlebot_simulator
-slam_gmapping
-
+pgm_map_creator/
+teleop_twist_keyboard/
+my_robot/
