--- a/add_markers/CMakeLists.txt
+++ b/add_markers/CMakeLists.txt
@@ -133,6 +133,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(${PROJECT_NAME}_node src/add_markers.cpp)
+add_executable(sample_node src/tmp.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -146,6 +147,10 @@ add_executable(${PROJECT_NAME}_node src/add_markers.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
+  ${catkin_LIBRARIES}
+)
+
+target_link_libraries(sample_node
   ${catkin_LIBRARIES}
 )
 
